5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_2425.log
== TEST (2019-04-06 22:36:59) 
-- CODE:
print(round(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x, 3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:40:39) 
-- CODE:
print(round(x, 3)"km/l")
-- ERROR:
File "XXXX", line 1
    print(round(x, 3)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:41:35) 
-- CODE:
print(round(x, 3)"km/l")
-- ERROR:
File "XXXX", line 1
    print(round(x, 3)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:43:00) 
-- CODE:
print(round(x, 3)"km/l")
-- ERROR:
File "XXXX", line 1
    print(round(x, 3)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:07:06) 
-- CODE:
a=float(input("Digite a distancia: "))
b=float(input("Digite o combustivel gasto: "))
v=a/b
print(round(v, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:07:38) 
-- CODE:
a=float(input("Digite a distancia: "))
b=float(input("Digite o combustivel gasto: "))
v=a/b
print(round(v, 3),"km/l")
-- EXECUTION TIME:
0.208487
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
